Add Lunr search

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -39,6 +39,7 @@
           <span class="control">
             <a class="button is-primary" href="#">Download</a>
           </span>
+          <input id="search-input" type="text" placeholder="Search docs">
         </div>
       </div>
     </div>
