--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -16,6 +16,10 @@
   --color-jet-70: #222;
   --color-jet-80: #191919;
   --color-black: #000;
+  --color-green: #78be20;
+  --color-red: #ea0016;
+  --color-orange: #fcaf17;
+  --color-blue: #008ecf;
   /* fonts */
   --rem-base: 18; /* used to compute rem value from desired pixel value (e.g., calc(18 / var(--rem-base) * 1rem) = 18px) */
   --body-font-size: 1.0625em; /* 17px */
