--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -24,11 +24,15 @@
 .doc h4,
 .doc h5,
 .doc h6 {
-  color: var(--heading-font-color);
+  color: var(--omp-dark-gray);
   font-weight: var(--heading-font-weight);
   hyphens: none;
   line-height: 1.3;
   margin: 1rem 0 0;
+}
+
+.doc h1 {
+  color: var(--omp-primary);
 }
 
 .doc > h1.page:first-child {
