Update color scheme and docs to ESMF

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -17,5 +17,5 @@
 @import "highlight.css";
 @import "print.css";
 @import "search.css";
-@import "omp-variables.css";
+@import "esmf-variables.css";
 @import "typeface-cairo.css";
