--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -24,7 +24,7 @@
 .doc h4,
 .doc h5,
 .doc h6 {
-  color: var(--omp-dark-gray);
+  color: var(--esmf-dark-gray);
   font-weight: var(--heading-font-weight);
   hyphens: none;
   line-height: 1.3;
@@ -33,7 +33,7 @@
 }
 
 .doc h1 {
-  color: var(--omp-primary);
+  color: var(--esmf-primary);
 }
 
 .doc > h1.page:first-child {
