--- a/src/css/esmf-variables.css
+++ b/src/css/esmf-variables.css
@@ -1,8 +1,12 @@
 :root {
-  --esmf-primary: #0028cd;
+  --esmf-primary: #995FAB;
+  --esmf-secondary: #EFF1F2;
+  --esmf-tertiary: #8DA5BF;
+  --esmf-bluegrey: #8298E0;
+  --eclipse-orange: #F88D2B;
   --esmf-dark-gray: #323d43ff;
   --esmf-black: #000;
-  --esmf-footer-font-color: #fff;
-  --esmf-font-family: "Cairo", sans-serif;
-  --esmf-heading-font-weight: 500;
+  --esmf-footer-font-color: #000;
+  --esmf-font-family: "Roboto", sans-serif;
+  --esmf-heading-font-weight: 400;
 }
