lowercase color hex values + logo as svg in header

--- a/src/css/esmf-variables.css
+++ b/src/css/esmf-variables.css
@@ -1,9 +1,9 @@
 :root {
-  --esmf-primary: #995FAB;
-  --esmf-secondary: #EFF1F2;
-  --esmf-tertiary: #8DA5BF;
+  --esmf-primary: #995fab;
+  --esmf-secondary: #eff1f2;
+  --esmf-tertiary: #8da5bf;
   --esmf-bluegrey: #8298E0;
-  --eclipse-orange: #F88D2B;
+  --eclipse-orange: #f88d2b;
   --esmf-dark-gray: #323d43ff;
   --esmf-black: #000;
   --esmf-footer-font-color: #000;
