--- a/src/css/header.css
+++ b/src/css/header.css
@@ -102,7 +102,10 @@ body {
   height: var(--navbar-height);
   padding: 10px 0 10px 0;
 }
-
+.logo-headline-wrapper svg {
+  height: 2rem;
+  width: auto;
+}
 .docu-title {
   margin-left: 15px;
   white-space: nowrap;
