Fix CSS linting issues

--- a/src/css/esmf-variables.css
+++ b/src/css/esmf-variables.css
@@ -2,7 +2,7 @@
   --esmf-primary: #995fab;
   --esmf-secondary: #eff1f2;
   --esmf-tertiary: #8da5bf;
-  --esmf-bluegrey: #8298E0;
+  --esmf-bluegrey: #8298e0;
   --eclipse-orange: #f88d2b;
   --esmf-dark-gray: #323d43ff;
   --esmf-black: #000;
