Changes page header color from primary to tertiary (blue)

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -37,7 +37,7 @@
   --panel-border-color: var(--color-smoke-90);
   --scrollbar-thumb-color: var(--color-gray-10);
   /* navbar */
-  --navbar-background: var(--esmf-primary);
+  --navbar-background: var(--esmf-tertiary);
   --navbar-font-color: var(--color-white);
   --navbar_hover-background: var(--color-black);
   --navbar-button-background: var(--color-white);
