--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -4,6 +4,9 @@ footer.footer {
   font-size: calc(15 / var(--rem-base) * 1rem);
   line-height: var(--footer-line-height);
   padding: 1.5rem;
+  position: relative;
+  float: left;
+  width: 100%;
 }
 
 .footer p {
