commiting css and js changes fo esmf website landing page

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -12,7 +12,7 @@
   .doc {
     flex: auto;
     font-size: var(--doc-font-size--desktop);
-    margin: var(--doc-margin--desktop);
+    /* margin: var(--doc-margin--desktop); */
     max-width: var(--doc-max-width--desktop);
     min-width: 0;
   }
