--- a/src/css/site.css
+++ b/src/css/site.css
@@ -13,10 +13,13 @@
 @import "doc.css";
 @import "pagination.css";
 @import "header.css";
+@import "sections-header.css";
 @import "footer.css";
+@import "sections-footer.css";
 @import "highlight.css";
 @import "print.css";
 @import "search.css";
 @import "esmf-variables.css";
 @import "typeface-cairo.css";
 @import "tiles.css";
+@import "sections.css";
