--- a/src/css/search.css
+++ b/src/css/search.css
@@ -11,6 +11,18 @@
   .navbar-menu {
     flex-grow: 0;
   }
+
+  .search-input-landing {
+    width: 800px;
+    padding: 2 2.25em;
+    padding-right: 30rem;
+  }
+}
+
+.search-input-landing {
+  padding-right: 6rem !important;
+  background-color: var(--color-smoke-70);
+  box-shadow: rgba(0, 0, 0, 0.24) 1px 3px 8px;
 }
 
 #search-input {
@@ -25,6 +37,16 @@
 }
 
 @media screen and (min-width: 769px) {
+  .sections-page #search-input {
+    width: 380px;
+    /* padding: 0.25rem 2rem; */
+    color: #496583;
+    font-family: inherit;
+    font-size: 1.25rem;
+    border: 10px solid var(--color-smoke-70);
+    line-height: 1.5;
+  }
+
   #search-input {
     width: 200px;
   }
@@ -36,9 +58,30 @@
   display: block;
   right: 0;
   left: inherit;
+  /* left: 0; */
   top: 100%;
   border-radius: 4px;
   margin: 6px 0 0;
+  padding: 0;
+  text-align: left;
+  height: auto;
+  background: transparent;
+  border: none;
+  max-width: 600px;
+  min-width: 500px;
+  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.2), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
+}
+
+.sections-page .search-result-dropdown-menu {
+  position: absolute;
+  z-index: 100;
+  display: block;
+  left: 0;
+  top: 100%;
+  border-radius: 4px;
+  /* margin: 6px 0 0; */
+  margin-left: 0.75rem !important;
+  margin-top: -3rem !important;
   padding: 0;
   text-align: left;
   height: auto;
@@ -57,6 +100,12 @@
 
   .search-result-dropdown-menu {
     min-width: calc(100vw - 3.75rem);
+  }
+
+  .search-input-landing {
+    width: 800px;
+    padding: 2 2.25em;
+    padding-right: 30rem;
   }
 }
 
