--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -37,8 +37,8 @@
   --panel-border-color: var(--color-smoke-90);
   --scrollbar-thumb-color: var(--color-gray-10);
   /* navbar */
-  --navbar-background: var(--esmf-tertiary);
-  --navbar-font-color: var(--color-white);
+  --navbar-background: var(--color-white);
+  --navbar-font-color: var(--esmf-tertiary);
   --navbar_hover-background: var(--color-black);
   --navbar-button-background: var(--color-white);
   --navbar-button-border-color: var(--panel-border-color);
