mobile navigation fixes

--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -43,6 +43,10 @@
   height: var(--nav-height);
 }
 
+.sections-body .nav {
+  background-color: white;
+}
+
 @media screen and (min-width: 769px) {
   .nav {
     box-shadow: 0.5px 0 3px var(--nav-border-color);
