--- a/src/css/header.css
+++ b/src/css/header.css
@@ -55,7 +55,7 @@ body {
 }
 
 .navbar-burger span {
-  background-color: var(--navbar-font-color);
+  background-color: white;
   height: 1.5px;
   width: 1rem;
 }
