--- a/src/partials/sections-nav-mobile.hbs
+++ b/src/partials/sections-nav-mobile.hbs
@@ -1,22 +1,22 @@
 <div class="sections-navbar-mobile">
             <ul class="sections-nav-list-mobile">
-          <li><a href="https://projects.eclipse.org/proposals/eclipse-semantic-modeling-framework-esmf">About ESMF</a></li>
+          <li><a href="https://projects.eclipse.org/proposals/eclipse-semantic-modeling-framework-esmf" target="_blank">About ESMF</a></li>
           <div class="sections-dropdown-mobile"> 
             <button class="sections-dropdown-button">Modeling <i class="fa fa-angle-right" aria-hidden="true"></i></button>
               <ul class="sections-dropdown-content">
-              <li><a href="https://eclipse-esmf.github.io/samm-specification/snapshot/index.html">SAMM</a></li>
-              <li><a href="https://eclipse-esmf.github.io/ame-guide/introduction.html">Aspect Model Editor</a></li>
-              <li><a href="https://eclipse-esmf.github.io/esmf-developer-guide/tooling-guide/samm-cli.html">SAMM CLI</a></li>
+              <li><a href="https://eclipse-esmf.github.io/samm-specification/snapshot/index.html" target="_blank">SAMM</a></li>
+              <li><a href="https://eclipse-esmf.github.io/ame-guide/introduction.html" target="_blank">Aspect Model Editor</a></li>
+              <li><a href="https://eclipse-esmf.github.io/esmf-developer-guide/tooling-guide/samm-cli.html" target="_blank">SAMM CLI</a></li>
             </ul>  
           </div>
           <div class="sections-dropdown-mobile"> 
             <button class="sections-dropdown-button">Developing <i class="fa fa-angle-right" aria-hidden="true"></i></button>    
               <ul class="sections-dropdown-content">
-              <li><a href="https://eclipse-esmf.github.io/esmf-developer-guide/tooling-guide/java-aspect-tooling.html">Java SDK</a></li>
-              <li><a href="https://eclipse-esmf.github.io/python-sdk-guide/index.html">Python SDK</a></li>
-              <li><a href="https://eclipse-esmf.github.io/js-sdk-aml-guide/index.html">JavaScript SDK</a></li>
+              <li><a href="https://eclipse-esmf.github.io/esmf-developer-guide/tooling-guide/java-aspect-tooling.html" target="_blank">Java SDK</a></li>
+              <li><a href="https://eclipse-esmf.github.io/python-sdk-guide/index.html" target="_blank">Python SDK</a></li>
+              <li><a href="https://eclipse-esmf.github.io/js-sdk-aml-guide/index.html" target="_blank">JavaScript SDK</a></li>
             </ul>  
           </div>
-          <li><a href="https://eclipse-esmf.github.io/samm-specification/snapshot/index.html">SAMM</a></li>
+          <li><a href="https://eclipse-esmf.github.io/samm-specification/snapshot/index.html" target="_blank">SAMM</a></li>
         </ul>
 </div>
