--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -283,6 +283,10 @@
   .sectionbody > .sectionBlue {
     height: unset;
   }
+
+  .sectionWhite-heading-blue > p {
+    font-size: 1.25rem;
+  }
 }
 
 @media screen and (max-width: 640px) {
@@ -290,13 +294,8 @@
     width: 100%;
   }
 
-  .get-started-button {
-    padding: 0.5rem 4rem;
-    font-size: 0.5rem;
-  }
-
   .sectionWhite-heading-blue > p {
-    font-size: 1.25rem;
+    font-size: 1rem;
   }
 
   .sectionbody > .sectionPurple,
@@ -312,5 +311,14 @@
 @media screen and (max-width: 800px) {
   .doc > h1 {
     display: none;
+  }
+
+  .sectionWhite-heading-blue > p {
+    font-size: 1.25rem;
+  }
+
+  .get-started-button {
+    padding: 0.25rem 1rem;
+    font-size: 0.25rem;
   }
 }
