--- a/src/partials/sections-header-content.hbs
+++ b/src/partials/sections-header-content.hbs
@@ -35,7 +35,7 @@
     </div>
     <div id="sections-topbar-nav" class="sections-navbar-menu">
         <ul class="sections-nav-list">
-          <li><a href="https://projects.eclipse.org/proposals/eclipse-semantic-modeling-framework-esmf" target="_blank">About ESMF</a></li>
+          <li><a href="https://projects.eclipse.org/projects/dt.esmf" target="_blank">About ESMF</a></li>
           <div class="sections-dropdown"> 
             <button class="sections-dropdown-button">Modeling <i class="fa fa-angle-right" aria-hidden="true"></i></button>
               <ul class="sections-dropdown-content">
