--- a/src/partials/sections-nav-mobile.hbs
+++ b/src/partials/sections-nav-mobile.hbs
@@ -1,6 +1,6 @@
 <div class="sections-navbar-mobile">
             <ul class="sections-nav-list-mobile">
-          <li><a href="https://projects.eclipse.org/proposals/eclipse-semantic-modeling-framework-esmf" target="_blank">About ESMF</a></li>
+          <li><a href="https://projects.eclipse.org/projects/dt.esmf" target="_blank">About ESMF</a></li>
           <div class="sections-dropdown-mobile"> 
             <button class="sections-dropdown-button">Modeling <i class="fa fa-angle-right" aria-hidden="true"></i></button>
               <ul class="sections-dropdown-content">
