--- a/src/partials/sections-header-content.hbs
+++ b/src/partials/sections-header-content.hbs
@@ -22,11 +22,13 @@
               </g>
             </g>
           </svg>
+          {{!-- USED IN MOBILE RES --}}
           {{!-- <span class="sections-docu-title">
             {{site.title}}
           </span> --}}
         </div>
       </a>
+      {{!-- USED IN MOBILE RES --}}
       {{!-- <button class="sections-navbar-burger" data-target="sections-topbar-nav"> --}}
         <span></span>
         <span></span>
@@ -54,11 +56,6 @@
           </div>
           <li><a href="https://eclipse-esmf.github.io/samm-specification/snapshot/index.html" target="_blank">SAMM</a></li>
         </ul>
-      {{!-- <div class="sections-navbar-end">
-        <div class="sections-navbar-item">
-          <input id="search-input" type="text" placeholder="Search docs"> 
-        </div>
-      </div> --}}
     </div>
   </nav>
 </header>
