--- a/src/css/search.css
+++ b/src/css/search.css
@@ -3,77 +3,13 @@
   justify-content: flex-end;
 }
 
-@media screen and (min-width: 1024px) {
-  .navbar-brand {
-    flex-grow: 1;
-  }
-
-  .navbar-menu {
-    flex-grow: 0;
-  }
-
-  .search-input-landing {
-    width: 1200px;
-    padding: 2 2.25em;
-    padding-right: 2rem;
-  }
-
-  .sections-page .search-result-dropdown-menu {
-    position: absolute;
-    z-index: 100;
-    display: block;
-    left: 0;
-    top: 100%;
-    border-radius: 4px;
-    /* margin: 6px 0 0; */
-    margin-left: 0.75rem !important;
-    margin-top: -6rem !important;
-    padding: 0;
-    text-align: left;
-    height: auto;
-    background: transparent;
-    border: none;
-    max-width: 600px;
-    min-width: 500px;
-    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.2), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
-  }
-}
-
-.search-input-landing {
-  padding-right: 4rem;
-  background-color: var(--color-smoke-70);
-  box-shadow: rgba(0, 0, 0, 0.24) 1px 3px 8px;
-}
-
 #search-input {
   color: #333;
   font-family: inherit;
   font-size: 0.95rem;
   width: 150px;
   border: 1px solid #dbdbdb;
-  border-radius: 0.1em;
   line-height: 1.5;
-  padding: 0 0.25em;
-}
-
-@media screen and (min-width: 769px) {
-  .sections-page #search-input {
-    width: 380px;
-    /* padding: 0.25rem 2rem; */
-    color: #496583;
-    font-family: inherit;
-    font-size: 1.25rem;
-    border: 10px solid var(--color-smoke-70);
-    line-height: 1.5;
-  }
-
-  #search-input {
-    width: 200px;
-  }
-
-  /* .sections-page .search-result-dropdown-menu {
-    margin-top: -1rem !important;
-  } */
 }
 
 .search-result-dropdown-menu {
@@ -94,26 +30,6 @@
   max-width: 600px;
   min-width: 500px;
   box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.2), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
-}
-
-@media screen and (max-width: 768px) {
-  .navbar-brand .navbar-item + .navbar-item {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .search-result-dropdown-menu {
-    min-width: calc(100vw - 3.75rem);
-  }
-
-  .search-input-landing {
-    width: 800px;
-    padding: 2 1.25em;
-  }
-
-  .sections-page .search-result-dropdown-menu {
-    margin-top: -6rem !important;
-  }
 }
 
 .search-result-dataset {
@@ -167,4 +83,102 @@
 
 .search-result-document-hit > a:hover {
   background-color: rgba(69, 142, 225, 0.05);
+}
+
+/* New sections layout of landing page */
+
+.sections-page #search-input {
+  border: 3px solid #496583;
+  padding: 0.5rem 0.25rem;
+  color: #496583;
+  font-family: inherit;
+  font-size: 1.25rem;
+  line-height: 1.5;
+  width: 18rem;
+}
+
+.search-input-landing {
+  margin-top: 1.25rem;
+  padding-right: 4rem;
+  background-color: white;
+}
+
+.search-input-landing:hover {
+  border: 2px solid var(--eclipse-orange);
+}
+
+/* Mobile */
+
+@media screen and (min-width: 1024px) {
+  .navbar-brand {
+    flex-grow: 1;
+  }
+
+  .navbar-menu {
+    flex-grow: 0;
+  }
+
+  .search-input-landing {
+    width: 1200px;
+    padding: 2 2.25em;
+    padding-right: 2rem;
+  }
+
+  .sections-page .search-result-dropdown-menu {
+    position: absolute;
+    z-index: 100;
+    display: block;
+    left: 0;
+    top: 100%;
+    border-radius: 4px;
+    margin-left: 0.75rem !important;
+    margin-top: -6rem !important;
+    padding: 0;
+    text-align: left;
+    height: auto;
+    background: transparent;
+    border: none;
+    max-width: 600px;
+    min-width: 500px;
+    box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.2), 0 2px 3px 0 rgba(0, 0, 0, 0.1);
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .sections-page #search-input:hover {
+    border: 2px solid var(--eclipse-orange);
+  }
+
+  #search-input {
+    width: 200px;
+  }
+
+  .search-input-landing:hover {
+    border: 2px solid var(--eclipse-orange);
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .navbar-brand .navbar-item + .navbar-item {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .search-result-dropdown-menu {
+    min-width: calc(100vw - 3.75rem);
+  }
+
+  .search-input-landing {
+    margin-top: 1.25rem;
+    padding-right: 4rem;
+    background-color: white;
+  }
+
+  .sections-page .search-result-dropdown-menu {
+    margin-top: -6rem !important;
+  }
+
+  .search-input-landing:hover {
+    border: 2px solid var(--eclipse-orange);
+  }
 }
