Fix Edit this page issue

--- a/src/partials/sections-footer-content.hbs
+++ b/src/partials/sections-footer-content.hbs
@@ -4,7 +4,7 @@
       <p>The source code for this UI is licensed under the terms of the MPL-2.0 license.</p>
     </div>
     <div class="sections-footer-container-right">
-      <a href="https://github.com/eclipse-esmf/eclipse-esmf.github.io/edit/main/documentation/modules/ROOT/pages/index.adoc">Edit this page</a>
+      <a href="https://github.com/eclipse-esmf/eclipse-esmf.github.io/edit/main/documentation/modules/ROOT/pages/index.adoc">Contribute to this page</a>
     </div>
   </div>
 </footer>
