--- a/src/css/sections.css
+++ b/src/css/sections.css
@@ -23,7 +23,9 @@
   width: 100%;
   padding: 0.75rem;
   position: relative;
-  height: 28rem;
+  height: 24rem;
+  padding-top: unset !important;
+  margin-top: unset !important;
 }
 
 .sectionWhite > .content {
@@ -31,6 +33,12 @@
   display: flex;
   /* grid-gap: 0.1rem; */
   padding: 0.1rem !important;
+}
+
+.sections-page > h1 {
+  font-size: 1rem;
+  padding-left: 1.5rem;
+  margin-top: 3rem;
 }
 
 .sectionWhite-left {
@@ -49,22 +57,29 @@
   border: none !important;
 }
 
+.sectionWhite-left .paragraph {
+  color: #496583;
+}
+
 .sectionWhite-right > div > div > div > img {
   float: right;
 }
 
 .sectionWhite-heading {
-  font-size: 2.25rem;
+  font-size: 2.2rem;
+  line-height: 1.2;
   font-weight: bold;
   color: #496583;
   padding: 1.2rem 0.1rem;
   word-break: keep-all;
+  padding-top: unset !important;
 }
 
 .sectionWhite-heading-blue {
-  font-size: 2rem;
+  font-size: 2.2rem;
+  line-height: 1.2;
   font-weight: bold;
-  color: #2945a3;
+  color: #496583;
   padding: 1.2rem 0.1rem;
   word-break: keep-all;
 }
@@ -205,7 +220,7 @@
 
 .tile .text p {
   margin-top: 10px;
-  font-size: calc(15.5 / var(--rem-base) * 1rem);
+  font-size: calc(16 / var(--rem-base) * 1rem);
   font-style: normal;
   color: var(--color-white);
 }
@@ -222,7 +237,7 @@
 
 .tile .link p {
   width: 100%;
-  font-size: calc(15.5 / var(--rem-base) * 1rem);
+  font-size: calc(16 / var(--rem-base) * 1rem);
 }
 
 .sectionBlue .link > p > a,
